<resources>
    <string name="app_name">Native Development Kit</string>
    <string name="action_settings">Settings</string>
    <string name="filter_identity">Identity</string>
    <string name="filter_blur">Blur 7x7</string>
    <string name="filter_sharpen">Sharpen 3x3</string>
    <string name="filter_derivative_h">horizontal derivative</string>
    <string name="filter_derivative_v">vertical derivative</string>
    <string name="filter_derivative">isotropic derivative</string>
    <string name="hough_line">hough line</string>
    <string name="hough_circle">hough circle</string>
    <string name="title_activity_hough">Hough Circles</string>
    <string name="title_activity_convolution">Spatial Convolution</string>
    <string name="title_activity_hough_line">Hough Lines</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
