<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ctyeung.ndkex1.MainActivity">
    <item
        android:id="@+id/filter_identity"
        android:orderInCategory="1"
        android:title="@string/filter_identity" />

    <item
        android:id="@+id/filter_blur"
        android:orderInCategory="1"
        android:title="@string/filter_blur"/>

    <item
        android:id="@+id/filter_sharpen"
        android:orderInCategory="1"
        android:title="@string/filter_sharpen"/>

    <item
        android:id="@+id/filter_deriviative_h"
        android:orderInCategory="1"
        android:title="@string/filter_derivative_h"/>

    <item
        android:id="@+id/filter_deriviative_v"
        android:orderInCategory="1"
        android:title="@string/filter_derivative_v"/>

    <item
        android:id="@+id/filter_deriviative_isotropic"
        android:orderInCategory="1"
        android:title="@string/filter_derivative"/>
</menu>
